--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/logInFragment">
+    app:startDestination="@id/calendarFragment">
 
     <fragment
         android:id="@+id/logInFragment"
@@ -104,6 +104,12 @@
         <action
             android:id="@+id/action_welcomeFragment_to_calendarFragment"
             app:destination="@id/calendarFragment" />
+        <argument
+            android:name="user"
+            app:argType="com.miguelrodriguez19.mindmaster.models.structures.UserResponse" />
+        <argument
+            android:name="token"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/securityPhraseLoaderFragment"
@@ -113,5 +119,11 @@
         <action
             android:id="@+id/action_securityPhraseLoaderFragment_to_calendarFragment"
             app:destination="@id/calendarFragment" />
+        <argument
+            android:name="user"
+            app:argType="com.miguelrodriguez19.mindmaster.models.structures.UserResponse" />
+        <argument
+            android:name="token"
+            app:argType="string" />
     </fragment>
 </navigation>
