--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/logInFragment"
         android:name="com.miguelrodriguez19.mindmaster.views.welcome.LogInFragment"
-        android:label="@string/welcome"
+        android:label="@string/log_in"
         tools:layout="@layout/fragment_log_in">
         <action
             android:id="@+id/action_logInFragment_to_signUpFragment"
@@ -19,10 +19,14 @@
             app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_logInFragment_to_welcomeFragment"
-            app:destination="@id/welcomeFragment" />
+            app:destination="@id/welcomeFragment"
+            app:popUpTo="@+id/logInFragment"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_logInFragment_to_securityPhraseLoaderFragment"
-            app:destination="@id/securityPhraseLoaderFragment" />
+            app:destination="@id/securityPhraseLoaderFragment"
+            app:popUpTo="@+id/logInFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
