Started FQAs implementation using Deepl API to translate an unique copy FAQs in Firebase
Created DeeplApi, ApiRest, new fragment to see FAQs, FAQs Comparator, and DeeplResponse

--- a/app/src/main/res/layout/fragment_bars_chart.xml
+++ b/app/src/main/res/layout/fragment_bars_chart.xml
@@ -3,15 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
-    android:background="@color/white"
     tools:context=".views.expenses.fragments.BarsChartFragment">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/bar_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
+
+    <ProgressBar
+        android:id="@+id/pb_loadingBarsChart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
