--- a/app/src/main/res/layout/fragment_pie_chart.xml
+++ b/app/src/main/res/layout/fragment_pie_chart.xml
@@ -4,13 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="250dp"
     android:padding="10dp"
-    android:background="@color/white"
     tools:context=".views.expenses.fragments.PieChartFragment">
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pie_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
+
+    <ProgressBar
+        android:id="@+id/pb_loadingPieChart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
