--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -34,7 +34,7 @@
                     android:background="@android:color/transparent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.viewpager.widget.ViewPager
+                <com.miguelrodriguez19.mindmaster.views.expenses.adapters.NonSwipeableViewPager
                     android:id="@+id/viewPager_graphs"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -133,10 +133,10 @@
             android:id="@+id/pb_loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/rv_latestMovements"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/rv_latestMovements" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
