--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -36,16 +36,7 @@
                 android:textColor="@color/gray_scorpion_200"
                 android:textSize="20sp" />
 
-
         </LinearLayout>
-
-        <Spinner
-            android:id="@+id/sp_language"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="9dp" />
 
         <pl.droidsonroids.gif.GifImageView
             android:id="@+id/giv_productivity"
@@ -185,16 +176,17 @@
 
             </LinearLayout>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_forgotten_password"
-                style="@style/body_large"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@android:color/transparent"
+                android:fontFamily="@font/popings_regular_400"
                 android:text="@string/forgotten_password"
                 android:textAllCaps="false"
-                android:textColor="@color/blue_cello_900" />
+                android:textColor="@color/blue_cello_900"
+                app:strokeWidth="0dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -209,16 +201,17 @@
                     android:text="@string/dont_have_an_account"
                     android:textColor="@color/blue_cello_900" />
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_signUp"
-                    style="@style/body_large"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/popings_regular_400"
                     android:text="@string/sign_up"
                     android:textAllCaps="false"
-                    android:textColor="@color/orange" />
+                    android:textColor="@color/orange"
+                    app:strokeWidth="0dp" />
 
             </LinearLayout>
         </LinearLayout>
