--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.schedule.fragments.DiaryFragment">
+    tools:context=".view.fragments.schedule.DiaryFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/mcv_cardSearchView"
