--- a/app/src/main/res/layout/fragment_passwords.xml
+++ b/app/src/main/res/layout/fragment_passwords.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.passwords.PasswordsFragment">
+    tools:context=".view.fragments.passwordVault.PasswordsFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/mcv_cardSearchView"
