--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/logInFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.welcome.LogInFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.welcome.LogInFragment"
         android:label="@string/log_in"
         tools:layout="@layout/fragment_log_in">
         <action
@@ -30,27 +30,27 @@
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.welcome.SignUpFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.welcome.SignUpFragment"
         android:label="@string/sign_up"
         tools:layout="@layout/fragment_sign_up" />
     <fragment
         android:id="@+id/calendarFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.schedule.fragments.CalendarFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.schedule.CalendarFragment"
         android:label="@string/calendar"
         tools:layout="@layout/fragment_calendar" />
     <fragment
         android:id="@+id/diaryFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.schedule.fragments.DiaryFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.schedule.DiaryFragment"
         android:label="@string/schedule"
         tools:layout="@layout/fragment_diary" />
     <fragment
         android:id="@+id/passwordsFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.passwords.PasswordsFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.passwordVault.PasswordsFragment"
         android:label="@string/passwords_manager"
         tools:layout="@layout/fragment_passwords" />
     <fragment
         android:id="@+id/expensesFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.expenses.fragments.ExpensesFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.expenses.ExpensesFragment"
         android:label="@string/expenses_manager"
         tools:layout="@layout/fragment_expenses" >
         <action
@@ -59,22 +59,22 @@
     </fragment>
     <fragment
         android:id="@+id/allMovementsFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.expenses.fragments.AllMovementsFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.expenses.AllMovementsFragment"
         android:label="@string/all_movements"
         tools:layout="@layout/fragment_all_movements" />
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.settings.fragments.AccountFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.settings.AccountFragment"
         android:label="@string/account"
         tools:layout="@layout/fragment_account" />
     <fragment
         android:id="@+id/helpFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.settings.fragments.HelpFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.settings.HelpFragment"
         android:label="@string/help_faqs"
         tools:layout="@layout/fragment_help" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.settings.fragments.SettingsFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.settings.SettingsFragment"
         android:label="@string/settings"
         tools:layout="@layout/fragment_settings" >
         <action
@@ -92,17 +92,17 @@
     </fragment>
     <fragment
         android:id="@+id/pieChartFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.expenses.fragments.PieChartFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.expenses.PieChartFragment"
         android:label="fragment_pie_chart"
         tools:layout="@layout/fragment_pie_chart" />
     <fragment
         android:id="@+id/barsChartFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.expenses.fragments.BarsChartFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.expenses.BarsChartFragment"
         android:label="fragment_bars_chart"
         tools:layout="@layout/fragment_bars_chart" />
     <fragment
         android:id="@+id/welcomeFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.welcome.WelcomeFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.welcome.WelcomeFragment"
         android:label="fragment_welcome"
         tools:layout="@layout/fragment_welcome" >
         <action
@@ -114,7 +114,7 @@
     </fragment>
     <fragment
         android:id="@+id/securityPhraseLoaderFragment"
-        android:name="com.miguelrodriguez19.mindmaster.views.welcome.SecurityPhraseLoaderFragment"
+        android:name="com.miguelrodriguez19.mindmaster.view.fragments.welcome.SecurityPhraseLoaderFragment"
         android:label="fragment_security_phrase_loader"
         tools:layout="@layout/fragment_security_phrase_loader" >
         <action
