--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.fragments.settings.SettingsFragment">
+    tools:context=".view.fragments.settings.SettingsFragment_OLD">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/mcv_cardSearchView"
